--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-VbIC2aw5JUr9y7aNfWe8K0cIQGWKn+kq5KOGJ5pX3o8fV9hA+KO1dsxAVZvSynmsd/M5G8Ij6VitO5StL1eRkg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -39,8 +39,8 @@
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>We Transform Your Pool</h1>
-            <p>Over 20 years creating perfect oases through pool plastering and remodeling.</p>
-            <a href="#contact" class="btn">Get Your Free Quote</a>
+            <p>15 Years Experience on Pool & Spa Renovation, Repair & Services Around the Area Of Houston.</p>
+            <a href="#contact" class="btn">Get Your Free Estimate</a>
         </div>
     </section>
 
@@ -49,7 +49,10 @@
         <div class="container">
             <h2>About Us</h2>
             <p>
-                Jale Pool Plaster is a family-owned business with over two decades of experience in pool construction, renovation, and maintenance. We specialize in durable plaster finishes and high-quality coatings, using top materials and innovative techniques. Our commitment is to create the perfect oasis for every client, ensuring each project fits their needs and style.
+                Jale Pool Plaster is a family-owned business with over 15 years of experience in pool and spa renovation, repair, and services in Houston. 
+                We specialize in pool plastering, replaster, coping, tile, spray deck, skimmer change, and acid wash. 
+                We use the best materials and innovative techniques to ensure durable, high-quality results. 
+                Our commitment is to create the perfect oasis for every client, adapting to their needs and style.
             </p>
         </div>
     </section>
@@ -60,20 +63,32 @@
             <h2>Services</h2>
             <div class="service-cards">
                 <div class="card">
-                    <h3>New Pools</h3>
-                    <p>We design and build custom pools to create unique and functional spaces.</p>
+                    <h3>Plaster & Replaster</h3>
+                    <p>Application and renewal of pool plaster for a fresh and long-lasting look.</p>
                 </div>
                 <div class="card">
-                    <h3>Pool Plastering</h3>
-                    <p>We apply and renew plaster for a fresh and long-lasting appearance.</p>
+                    <h3>Coping</h3>
+                    <p>Installation and repair of pool edges to enhance aesthetics and safety.</p>
                 </div>
                 <div class="card">
-                    <h3>Tiles & Coping</h3>
-                    <p>We install and repair tiles, mosaics, and coping to enhance aesthetics and safety.</p>
+                    <h3>Tile</h3>
+                    <p>Installation and repair of decorative tiles and mosaics.</p>
+                </div>
+                <div class="card">
+                    <h3>Spray Deck</h3>
+                    <p>Application of non-slip coating for poolside areas.</p>
+                </div>
+                <div class="card">
+                    <h3>Skimmer Change</h3>
+                    <p>Professional skimmer replacement for better filtration and cleaning.</p>
                 </div>
                 <div class="card">
                     <h3>Cleaning & Acid Wash</h3>
-                    <p>We remove stains and residues with professional washing methods to restore shine.</p>
+                    <p>Stain and residue removal with professional methods to restore shine.</p>
+                </div>
+                <div class="card">
+                    <h3>Free Estimate</h3>
+                    <p>Request your free, no-obligation quote.</p>
                 </div>
             </div>
         </div>
@@ -120,8 +135,13 @@
             <p>We are ready to help you with your pool project! Request a free consultation or quote.</p>
             <div class="contact-info">
                 <p>Phone: +1&nbsp;281&nbsp;865&nbsp;6000</p>
-                <p>Email: <a href="mailto:info@jalepoolplaster.com">info@jalepoolplaster.com</a></p>
-                <p>Houston, Texas, USA</p>
+                <p>Email: <a href="mailto:Jalepools89@gmail.com">Jalepools89@gmail.com</a></p>
+                <p>Address: Downtown Houston, TX, United States, Texas</p>
+                <p>
+                    <a href="https://www.facebook.com/p/Jale-Pool-Plaster-100075865074794/" target="_blank" aria-label="Facebook">
+                        Facebook: Jale Pool Plaster
+                    </a>
+                </p>
             </div>
         </div>
     </section>
@@ -131,10 +151,11 @@
         <div class="container">
             <p>&copy; 2025 Jale Pool Plaster. All rights reserved.</p>
             <div class="social-links">
-                <a href="#" aria-label="Facebook">Facebook</a>
+                <a href="https://www.facebook.com/p/Jale-Pool-Plaster-100075865074794/" target="_blank" aria-label="Facebook">Facebook</a>
                 <a href="#" aria-label="Instagram">Instagram</a>
                 <a href="#" aria-label="TikTok">TikTok</a>
             </div>
+            <p>Address: Downtown Houston, TX, United States, Texas | Email: <a href="mailto:Jalepools89@gmail.com">Jalepools89@gmail.com</a></p>
         </div>
     </footer>
 
@@ -147,10 +168,10 @@
             navLinks.classList.toggle('open');
         });
 
-        // Language selector (basic reload, for demo purposes)
+        // Language selector (basic reload)
         document.getElementById('language-selector').addEventListener('change', function() {
             if (this.value === 'es') {
-                window.location.href = 'index_es.html'; // You need to create this file with Spanish content
+                window.location.href = 'index_es.html';
             } else {
                 window.location.href = 'index.html';
             }
