--- a/index_es.html
+++ b/index_es.html
@@ -36,7 +36,7 @@
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>Transformamos tu alberca</h1>
-            <p>Más de 20 años creando oasis perfectos con recubrimiento y remodelación de albercas.</p>
+            <p>Más de 15 años de experiencia en renovación, reparación y servicios de albercas y spas en el área de Houston.</p>
             <a href="#contact" class="btn">Solicita tu cotización gratis</a>
         </div>
     </section>
@@ -46,7 +46,10 @@
         <div class="container">
             <h2>Nosotros</h2>
             <p>
-                Jale Pool Plaster es una empresa familiar con más de dos décadas de experiencia en construcción, renovación y mantenimiento de albercas. Nos especializamos en acabados duraderos y recubrimientos de alta calidad, utilizando los mejores materiales y técnicas innovadoras. Nuestro compromiso es crear el oasis perfecto para cada cliente, asegurando que cada proyecto se adapte a sus necesidades y estilo.
+                Jale Pool Plaster es una empresa familiar con más de 15 años de experiencia en renovación, reparación y servicios de albercas y spas en Houston. 
+                Estamos especializados en recubrimiento de albercas (plaster), replaster, coping, tile, espray deck, cambio de skimmer y lavado ácido. 
+                Utilizamos los mejores materiales y técnicas innovadoras para garantizar resultados duraderos y de alta calidad. 
+                Nuestro compromiso es crear el oasis perfecto para cada cliente, adaptándonos a sus necesidades y estilo.
             </p>
         </div>
     </section>
@@ -57,20 +60,32 @@
             <h2>Servicios</h2>
             <div class="service-cards">
                 <div class="card">
-                    <h3>Albercas nuevas</h3>
-                    <p>Diseñamos y construimos albercas personalizadas para crear espacios únicos y funcionales.</p>
+                    <h3>Plaster y Replaster</h3>
+                    <p>Aplicación y renovación de recubrimiento para una apariencia fresca y duradera.</p>
                 </div>
                 <div class="card">
-                    <h3>Recubrimiento de alberca</h3>
-                    <p>Aplicamos y renovamos el recubrimiento para una apariencia fresca y duradera.</p>
+                    <h3>Coping</h3>
+                    <p>Instalación y reparación de bordes para mejorar la estética y seguridad.</p>
                 </div>
                 <div class="card">
-                    <h3>Azulejos y borde</h3>
-                    <p>Instalamos y reparamos azulejos, mosaicos y bordes para mejorar la estética y seguridad.</p>
+                    <h3>Tile</h3>
+                    <p>Colocación y reparación de azulejos y mosaicos decorativos.</p>
+                </div>
+                <div class="card">
+                    <h3>Espray Deck</h3>
+                    <p>Aplicación de recubrimiento antideslizante para áreas alrededor de la alberca.</p>
+                </div>
+                <div class="card">
+                    <h3>Cambio de Skimmer</h3>
+                    <p>Reemplazo profesional de skimmers para mejorar la filtración y limpieza.</p>
                 </div>
                 <div class="card">
                     <h3>Limpieza y lavado ácido</h3>
-                    <p>Eliminamos manchas y residuos con métodos profesionales para restaurar el brillo.</p>
+                    <p>Eliminación de manchas y residuos con métodos profesionales para restaurar el brillo.</p>
+                </div>
+                <div class="card">
+                    <h3>Estimación gratuita</h3>
+                    <p>Solicita tu cotización sin compromiso.</p>
                 </div>
             </div>
         </div>
@@ -117,8 +132,13 @@
             <p>¡Estamos listos para ayudarte con tu proyecto de alberca! Solicita una consulta o cotización gratis.</p>
             <div class="contact-info">
                 <p>Teléfono: +1&nbsp;281&nbsp;865&nbsp;6000</p>
-                <p>Email: <a href="mailto:info@jalepoolplaster.com">info@jalepoolplaster.com</a></p>
-                <p>Houston, Texas, USA</p>
+                <p>Email: <a href="mailto:Jalepools89@gmail.com">Jalepools89@gmail.com</a></p>
+                <p>Dirección: Downtown Houston, TX, United States, Texas</p>
+                <p>
+                    <a href="https://www.facebook.com/p/Jale-Pool-Plaster-100075865074794/" target="_blank" aria-label="Facebook">
+                        Facebook: Jale Pool Plaster
+                    </a>
+                </p>
             </div>
         </div>
     </section>
@@ -128,10 +148,11 @@
         <div class="container">
             <p>&copy; 2025 Jale Pool Plaster. Todos los derechos reservados.</p>
             <div class="social-links">
-                <a href="#" aria-label="Facebook">Facebook</a>
+                <a href="https://www.facebook.com/p/Jale-Pool-Plaster-100075865074794/" target="_blank" aria-label="Facebook">Facebook</a>
                 <a href="#" aria-label="Instagram">Instagram</a>
                 <a href="#" aria-label="TikTok">TikTok</a>
             </div>
+            <p>Dirección: Downtown Houston, TX, United States, Texas | Email: <a href="mailto:Jalepools89@gmail.com">Jalepools89@gmail.com</a></p>
         </div>
     </footer>
 
